@@ -1,3 +1,8 @@
+2024-01-28  Bart Schaefer  <schaefer@zsh.org>
+
+	* 52509: configure.ac, Src/utils.c: manage internals of stdio
+	objects when performing redirections.
+
 2024-01-28  Oliver Kiddle  <opk@zsh.org>
 
 	* 52500: Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/prompt.c:
